    only show cover and tite in context view. No attempt is made to get artist,
    album, or song information - as these are likely to fail anyway.
42. Jamendo radio streams.
43. Install listenlive.xml to Cantata folder, as opposed to embedding in app.
44. Use an external-helper app to read/write tags - to isolate Cantata from
    TagLib crashes.

1.3.3
-----
 1. If Cantata is started whilst an instance is also running, raise window of
    current instance. (Linux only fix)
 2. Add song to playqueue from albums page when double-clicked.
 3. Fix display of online-service track album-artist in copy dialog.
 4. Ensure library is loaded the very first time Cantata is run (ie. after
    connected to MPD via initial settings wizard).
 5. When song is updated in context view, abort any current network jobs.
 6. Fix expand all / collapse all actions. Expand all will only expand 1 level
    for main browsers.
 7. When reading lines from user mpd.conf file, read as utf-8.
 8. Reset devices and online-services models when artist-view cover size
    changes.
 9. If downloading online-service track listing fails, then stop loader and
    show error.
10. Use new location of Jamendo DB listing.

1.3.2
-----
 1. In cover/artist dialog, when attempting to save an image into Cantata's
    cache folder - ensure the 'covers' sub-folder is created.
 2. When saving artist image from cover dialog, if set to save in MPD folder and
    song's path does not have 2 folder elements then save in cache folder.
    Cantata will only save artist images, and backdrops, in MPD folder if the
    folder structure is (e.g.) Artist/Album/Track.mp3
 3. Use case-insensitive sort of folder view items when adding to playqueue.
 4. When determining the 'basic' artist of a track, if albumartist is set and
    artist is not, then use albumartist.
 5. For the web-links in the context view, replace ampersand and question mark
    characters in artist names with the relevant URL encoding.