@@ -3,19 +3,20 @@ Table of Contents
 
  1. Introduction
  2. Dependencies
- 3. Bugs
- 4. Translations
- 5. Covers
- 6. Advanced Config Items
- 7. CUE Files
- 8. Streams
- 9. MultiMedia Keys
-10. Dynamic Helper Script - Local Mode
-11. Dynamic Helper Script - Server Mode
-12. Source Code
-13. Debug Logging
-14. Credits
-15. Windows
+ 3. Building
+ 4. Bugs
+ 5. Translations
+ 6. Covers
+ 7. Advanced Config Items
+ 8. CUE Files
+ 9. Streams
+10. MultiMedia Keys
+11. Dynamic Helper Script - Local Mode
+12. Dynamic Helper Script - Server Mode
+13. Source Code
+14. Debug Logging
+15. Credits
+16. Windows
 
 
 
@@ -98,7 +99,19 @@ Cantata may also use the following optional libraries:
 9. MusicBrainz5 - either this or CDDB required for Audio CDs
 
 
-3. Bugs
+3. Building
+===========
+
+Please refer to the INSTALL file for general build instructions. Details on how
+Cantata is build for Windows can be found in section 16.
+
+Some Qt4 builds still use com.trolltech.QtDBus.QtTypeName, whereas newer ones
+use org.qtproject.QtDBus.QtTypeName. If you get build failures such as "fatal
+error: playeradaptor.h: No such file or directory" then set
+-DUSE_OLD_DBUS_TYPEDEF=ON when calling CMake.
+
+
+4. Bugs
 =======
 
 Before reporting bugs, please check that this is not an MPD related issue with
@@ -116,7 +129,7 @@ Please DO NOT attach images to the bug page - as the attachment quota is almost
 full. Instead, please provide links to any relevant screenshots.
 
 
-4. Translations
+5. Translations
 ===============
 
 Becasue Cantata started out as a KDE4 application, the translation files are
@@ -170,7 +183,7 @@ In the po folder there is a script named generate.sh, this is used to extract
 translatable strings and update current translations.
 
 
-5. Covers
+6. Covers
 =========
 
 When displaying covers, Cantata will load album covers in the following order:
@@ -322,7 +335,7 @@ the folder hierarchy is 2 levels (artist/album/), and the user has write
 permissions. If not, then they will be saved in Cantata's cache folder.
 
 
-6. Advanced Config Items
+7. Advanced Config Items
 ========================
 
 Cantata contains a few advanced config items, for which there is currently no
@@ -445,7 +458,7 @@ alwaysUseLsInfo=true
 menu=3
 
 
-7. CUE Files
+8. CUE Files
 ============
 
 If Cantata is running with MPD>=0.17, then it will attempt to parse the contents
@@ -462,7 +475,7 @@ file uses - so, for portability, it would be best if your CUE files used UTF-8
 encoding. When loading a CUE file, Cantata will attempt to load the file as if
 it was UTF-8 encoded, if this fails it will try with the "System" codec. You may
 add to this list of encodings to try by using the 'cueFileCodecs' config item
-(as detailed in section 6 above). If Cantata fails with all configured
+(as detailed in section 7 above). If Cantata fails with all configured
 encodings, then it will 'peek' at the 1st 1k bytes, and ask Qt to see if it can
 determine the encoding - and fallback to UTF-8 otherwise. (This peeking and
 fallback was how Cantata behaved in pre 1.2 versions - and is how Clementine
@@ -473,7 +486,7 @@ or you have not configured the music folder correctly, etc.) then Cantata will
 add the CUE File to the album's track listing.
 
 
-8. Streams
+9. Streams
 ==========
 
 Cantata contains a list of in-built stream categories, or providers. To import
@@ -540,8 +553,8 @@ To create .streams file:
     4. mv NAME.tar.gz NAME.streams
 
 
-9. MultiMedia Keys
-==================
+10. MultiMedia Keys
+===================
 
 Cantata may be controlled via the media keys on some keyboards. To enable this,
 the KDE version can be configured to use KDE's global shortcuts. 
@@ -555,7 +568,7 @@ interface. This interface is normally started automatically under GNOME/Unity
 Cantata's configuration dialog (as of v1.1 this option is enabled by default)
 
 
-10. Dynamic Helper Script - Local Mode
+11. Dynamic Helper Script - Local Mode
 ======================================
 
 When a dynamic playlist is loaded in Cantata, the cantata-dynamic helper script
@@ -593,7 +606,7 @@ playlist, load the 'MyPlaylist' playlist, and start this on the mpd at
     MPD_HOST=pass@hostname MPD_PORT=1234 /usr/share/cantata/scripts/cantata-dynamic start
 
 
-11. Dynamic Helper Script - Server Mode
+12. Dynamic Helper Script - Server Mode
 =======================================
 
 In addition to the above, the helper script may be installed on the system
@@ -792,7 +805,7 @@ addition of a header - e.g.
 {CANTATA/<id>}STATUS:STATE:<current status>\nRULES:<name of currently active rule>\nTIME:<epoch time since started, or last rule modification>
 
 
-12. Source Code
+13. Source Code
 ===============
 
 The Cantata source folder contains the following structure:
@@ -826,7 +839,7 @@ Symbolc media icons are taken from gnome icon theme, but have been scaled with
   rsvg-convert -a -w 128 -f svg in.svg -o out.svg
 
 
-13. Debug Logging
+14. Debug Logging
 =================
 
 Cantata contains some debug logging that might help to diagnose certain issues.
@@ -879,7 +892,7 @@ NOTE: Debug logging will function regardless of whether you have created a
 Debug or Release build.
 
 
-14. Credits
+15. Credits
 ===========
 
 Cantata contains code/icons from:
@@ -903,7 +916,7 @@ Cantata contains code/icons from:
     QtSolutions    - QtIOCompressor, and QtSingleApplication
 
 
-15. Windows
+16. Windows
 ===========
 
 The following steps are used to compile Cantata, and create the windows
