@@ -69,6 +69,8 @@
 43. Install listenlive.xml to Cantata folder, as opposed to embedding in app.
 44. Use an external-helper app to read/write tags - to isolate Cantata from
     TagLib crashes.
+45. Add -DUSE_OLD_DBUS_TYPEDEF=ON to CMake options. This can be used to force
+    usage of OLD dbus XML files.
 
 1.3.3
 -----
